--- a/buses.html
+++ b/buses.html
@@ -11,7 +11,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Available Bus</title>
+    <link rel="icon" href="./Media/Icon.jpg">
+    <title>bdtickets ∥ Kazi Asif Iqbal</title>
   </head>
   <body>
     <div class="navbar">
